fix lp.html left align

--- a/public/stylesheets/carousel.css
+++ b/public/stylesheets/carousel.css
@@ -73,14 +73,14 @@ span.topword2 {font-size: 28px; }
 -------------------------------------------------- */
 
 /* Center align the text within the three columns below the carousel */
-.marketing .col-lg-4 {
+.marketing .col-lg-6 {
   margin-bottom: 20px;
   text-align: center;
 }
 .marketing h2 {
   font-weight: normal;
 }
-.marketing .col-lg-4 p {
+.marketing .col-lg-6 p {
   margin-right: 10px;
   margin-left: 10px;
 }
